[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rtm_con"
version = "0.1.0"
description = "RTM protocol implementation by construct, which protocol defined by GB/T 32960-2016/2025"
readme = "README.md"
license = { text = "GPLv2" }
authors = [{ name = "BeidouChangxi", email = "Beidoustar@Gmail.com" }]
dependencies = [
    "construct",
    "openpyxl"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]