[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rtm_con"
version = "0.1.0"
description = "RTM protocol implementation by construct, which protocol defined by GB/T 32960-2016/2025"
readme = "README.md"
license = { text = "GPLv2" }
authors = [{ name = "BeidouChangxi", email = "Beidoustar@Gmail.com" }]
dependencies = [
    "construct"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

excel = [
    "openpyxl"
]

sig = [
    "cryptography"
]

full = ["rtm_con[excel,sig]"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
rtmgui = "rtm_con.msg_to_gui:main"
rtmlog = "rtm_con.msg_to_excel:main"

[tool.pytest.ini_options]
testpaths = ["tests"]